src/main/java/lexical/test/failing/01.ru
Holaa@@3131

/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 6 | Caracter invalido: @ |